--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9,<3.12"
+numpy = "^1.22"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
