--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+#    if: github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v3
@@ -73,7 +73,16 @@ jobs:
       - name: Build
         run: |
           poetry build
-          zip -qq -r dir.zip dist
+#          zip -qq -r dir.zip dist
+
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.13.0
+        env:
+          # TODO: Build Cython with the compile-all flag?
+          CIBW_BUILD: cp39-manylinux_x86_64
+          CIBW_PRERELEASE_PYTHONS: True
+          CIBW_ARCHS_LINUX: auto aarch64
+          CIBW_ENVIRONMENT: CFLAGS='-O3 -g0 -mtune=generic -pipe -fPIC' LDFLAGS='-fPIC'
 
       #    - name: Publish
       #      env:
