--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,13 +76,13 @@ jobs:
 #          zip -qq -r dir.zip dist
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.13.0
+        uses: pypa/cibuildwheel@v2.14.0
         env:
-          # TODO: Build Cython with the compile-all flag?
           CIBW_BUILD: cp39-manylinux_x86_64
-          CIBW_PRERELEASE_PYTHONS: True
-          CIBW_ARCHS_LINUX: auto aarch64
-          CIBW_ENVIRONMENT: CFLAGS='-O3 -g0 -mtune=generic -pipe -fPIC' LDFLAGS='-fPIC'
+          #CIBW_PRERELEASE_PYTHONS: False
+          CIBW_ARCHS_LINUX: auto
+          #CIBW_ENVIRONMENT: CFLAGS='-O3 -g0 -mtune=generic -pipe -fPIC' LDFLAGS='-fPIC'
+          CIBW_BUILD_VERBOSITY: 1
 
       #    - name: Publish
       #      env:
