--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ numpy = "^1.22"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 pytest-runner = "^6.0.0"
-toml = "^0.10"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core", "setuptools", "Cython"]
 build-backend = "poetry.core.masonry.api"
