--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,10 +70,6 @@ jobs:
       - name: Set build version from git including rev count
         run: |
           poetry version `poetry version -s`.`git rev-list --count HEAD`
-      - name: Build
-        run: |
-          poetry build
-#          zip -qq -r dir.zip dist
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.14.0
@@ -83,6 +79,11 @@ jobs:
           CIBW_ARCHS_LINUX: auto
           #CIBW_ENVIRONMENT: CFLAGS='-O3 -g0 -mtune=generic -pipe -fPIC' LDFLAGS='-fPIC'
           CIBW_BUILD_VERBOSITY: 1
+
+      - name: Build source wheel
+        run: |
+          poetry build
+#          zip -qq -r dir.zip dist
 
       #    - name: Publish
       #      env:
