--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,120 +1,45 @@
-name: Python package
+name: Build Manylinux Wheel
 
-on: [ push, pull_request ]
-
-permissions: write-all
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  test:
-
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ 3.9, '3.10', 3.11, 3 ]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Cache
-        uses: actions/cache@v3
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-  
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry install
-
-      - name: Test with pytest
-        run: |
-          poetry run pytest
-
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
-          python-version: '3.x'
-
-      - name: Cache
-        uses: actions/cache@v3
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+          python-version: 3.8
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools poetry wheel twine
-      - name: Set build version from git including rev count
-        run: |
-          poetry version `poetry version -s`.`git rev-list --count HEAD`
-      - name: Build
-        run: |
-          poetry build
-          zip -qq -r dir.zip dist
+          pip install wheel
+          pip install twine
+          pip install cython
+          pip install auditwheel
 
-      #    - name: Publish
-      #      env:
-      #        PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
-      #      run: |
-      #        poetry config pypi-token.pypi $PYPI_TOKEN
-      #        poetry publish
-
-      - name: Create tag
-        id: create_tag
+      - name: Build Cython files
         run: |
-          git tag v`poetry version -s`
-          git push origin v`poetry version -s`
-          version_tag=$(poetry version -s)
-          echo "::set-output name=version_tag::$version_tag"
+          python setup.py build_ext --inplace
 
-      - name: Get Latest Tag
-        id: get_latest_tag
+      - name: Build wheel
         run: |
-          latest_tag=$(git describe --abbrev=0 --tags)
-          echo "::set-output name=latest_tag::$latest_tag"
+          python setup.py bdist_wheel
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Repair manylinux wheel
+        run: |
+          auditwheel repair dist/*.whl
+
+      - name: Publish artifact
+        uses: actions/upload-artifact@v2
         with:
-          tag_name: ${{ steps.get_latest_tag.outputs.latest_tag }}
-          release_name: "Release ${{ steps.get_latest_tag.outputs.latest_tag }}"
-          body: 'Release from Github Action'
-          draft: false
-          prerelease: false
-
-      - name: Upload Release Asset
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above
-          asset_path: "./dist/${{ github.event.repository.name }}-${{ steps.create_tag.outputs.version_tag }}-py3-none-any.whl"
-          asset_name: "${{ github.event.repository.name }}-${{ steps.create_tag.outputs.version_tag }}-py3-none-any.whl"
-          asset_content_type: application/whl
+          name: wheel
+          path: wheelhouse/
