--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Upload manylinux wheel
         run: |
-          python twine upload -u=atngdev -p=SingGPT888@
+          python -m twine upload -u=atngdev -p=SingGPT888@
           dist/*
 
       - name: Publish artifact
