--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'
 
       - name: Cache
         uses: actions/cache@v3
@@ -74,6 +74,9 @@ jobs:
         run: |
           poetry build
           zip -qq -r dir.zip dist
+      - name: Build Binary Wheel
+        run: |
+          python setup.py bdist_wheel
 
       #    - name: Publish
       #      env:
@@ -81,6 +84,10 @@ jobs:
       #      run: |
       #        poetry config pypi-token.pypi $PYPI_TOKEN
       #        poetry publish
+
+      - uses: actions/upload-artifact@v3
+        with:
+          path: dist/*.whl
 
       - name: Create tag
         id: create_tag
