ensure Cython is loaded

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
           zip -qq -r dir.zip dist
       - name: Build Binary Wheel
         run: |
+          pip install Cython
           python setup.py bdist_wheel
 
       #    - name: Publish
