--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python = "^3.9,<3.12"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.1.3"
 pytest-runner = "^6.0.0"
+Cython = "^0.29"
 
 [build-system]
 requires = ["poetry-core"]
